# NewMoney

./: README.md  architecture.drawio  pyproject.toml
data_pipeline/ingestion/: api_to_s3_pipeline.py  btmc.closing.api_to_s3_pipeline.py  vci.ohlc.api_to_s3_pipeline.py  vci.symbol.api_to_s3_pipeline.py
data_pipeline/ingestion/comsumers/: s3_ingestor.py
data_pipeline/ingestion/producers/: mock_api_producer.py
data_pipeline/ingestion/producers/btmc/: price_producer.py
data_pipeline/ingestion/producers/vci/: common.py  main_producer.py  ohlc_producer.py  symbol_producer.py
data_pipeline/ingestion/utils/: kafka.py  requests.py
data_pipeline/ingestion/utils/kakfa/: base.py  consumers.py  producers.py
datapipeline/ingestion/producers/vci/: common.py
docker/clickhouse/: clickhouse.docker-compose.yml
docker/clickhouse/config/: config.xml  users.xml
docker/kafka/: kafka.docker-compose.yml
docker/redis/: redis.docker-compose.yml
