[project]
name = "newmoney"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Vien",email = "vienvandung312@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "boto3 (>=1.37.37,<2.0.0)",
    "confluent-kafka (>=2.10.0,<3.0.0)",
    "vnstock (>=3.2.3,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [
    { include = "data_pipeline" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
